syntax = "proto3";

option java_multiple_files= true ;
option java_package = "org.example";
import "google/protobuf/empty.proto";

message ServerRegistrationRequest{
  string host=1;
  int32 port=2;
}

service ServerRegistrationService {
  rpc registerServer (ServerRegistrationRequest) returns (ServerRegistrationResponse) ;
  rpc getServerList(google.protobuf.Empty) returns (ListOfServersResponse);
}

message ServerRegistrationResponse{
  string host=1;
  int32 port=2;
  string registration_response=3;
}

message ListOfServersResponse{
repeated ServerRegistrationRequest serversList=1;
}
